# fayyr-indexer

./: Cargo.toml  README.md  prerequisites-ubuntu-20.4-LTS.sh
src/: configs.rs  database.rs  main.rs
