[package]
name = "indexer-example"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.11.0-beta.2"
clap = "3.0.0-beta.1"
openssl-probe = { version = "0.1.2" }
postgres = {version = "0.19.1"}
chrono = "0.4.19"
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
base64 = "0.11"
serde = "1"

near-client = { git = "https://github.com/near/nearcore", rev = "09b978c15a170a1082eabe9f275030a9e5b27382" }
near-indexer = { git = "https://github.com/near/nearcore", rev = "09b978c15a170a1082eabe9f275030a9e5b27382" }
