[package]
name = "indexer-example"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[dependencies]
actix = "=0.11.0-beta.2"
clap = "3.0.0-beta.1"
openssl-probe = { version = "0.1.2" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
near-sdk = "4.0.0-pre.3"
chrono = "0.4.19"
tokio = { version = "1.1", features = ["sync"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
futures = "0.3.5"
tracing-subscriber = "0.2.4"
base64 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"

near-client = { git = "https://github.com/near/nearcore", rev = "5a6fb2bd28eca69d38a1f85e7f5fe520cdedbca5" }
near-indexer = { git = "https://github.com/near/nearcore", rev = "5a6fb2bd28eca69d38a1f85e7f5fe520cdedbca5" }